--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^2.0.2",
-    "mysql2": "^3.9.0"
+    "mysql2": "^3.9.0",
+    "puppeteer": "^22.0.0"
   }
 }
