--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^2.0.2",
     "mysql2": "^3.9.0",
+    "node-cron": "^3.0.3",
     "puppeteer": "^22.0.0"
   }
 }
