Update migrate script to use Node.js runner

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,9 @@
     "start": "node server.js",
     "hash-password": "node hash.js",
     "curl": "sh curl.sh",
-    "migrate": "bash scripts/run-migrations.sh",
-    "migrate:list": "ls -la migrations/",
-    "migrate:manual": "echo 'Run manually: mysql -u root -p kelseys_cats < backend/migrations/<filename>.sql'"
+    "migrate": "node scripts/run-migrations.js",
+    "migrate:bash": "bash scripts/run-migrations.sh",
+    "migrate:list": "ls -la migrations/"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
