--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     
     "migrate:vfv-table": "node scripts/migrations/run-single-migration.js create_vfv_cats_table.sql",
     "migrate:view": "node scripts/migrations/run-single-migration.js add_featured_to_view.sql",
+    "migrate:vfv-integration": "node scripts/migrations/run-single-migration.js add_vfv_to_view.sql",
     "migrate:adoptapet-url": "node scripts/migrations/run-single-migration.js add_adoptapet_url.sql",
     "migrate:adoptapet-id": "node scripts/migrations/run-single-migration.js add_adoptapet_id_to_vfv_cats.sql",
     "migrate:additional-images": "node scripts/migrations/run-single-migration.js add_additional_images_column.sql"
