Add Cloudinary credentials to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,9 @@ NODE_ENV=development
 # Get your API keys at: https://www.petfinder.com/developers/
 PETFINDER_API_KEY=your_petfinder_api_key_here
 PETFINDER_SECRET=your_petfinder_secret_here
+
+# Cloudinary (required for image uploads)
+# Get your credentials at: https://cloudinary.com/
+CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_API_KEY=your_api_key_here
+CLOUDINARY_API_SECRET=your_api_secret_here
