Enhance .env.example with organized sections and FRONTEND_ORIGIN

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,21 +1,40 @@
-# Database
-DB_URL=mysql://user:password@localhost:3306/kelseys_cats
+# ============================================
+# Kelsey's Cats - Backend Environment Config
+# ============================================
+# Copy this file to .env and fill in your values
 
-# JWT Authentication
-JWT_SECRET=your-secret-key-here
-
-# Server
+# ----------------
+# Server Settings
+# ----------------
 PORT=3000
 NODE_ENV=development
 
-# Petfinder API (required for shelter cats integration)
-# Get your API keys at: https://www.petfinder.com/developers/
-PETFINDER_API_KEY=your_petfinder_api_key_here
-PETFINDER_SECRET=your_petfinder_secret_here
+# Frontend URL for CORS (change in production)
+FRONTEND_ORIGIN=http://localhost:5173
 
-# Cloudinary (required for image uploads)
-# Get your credentials at: https://cloudinary.com/
+# ----------------
+# Database
+# ----------------
+# MySQL connection string format: mysql://user:password@host:port/database
+DB_URL=mysql://user:password@localhost:3306/kelseys_cats
+
+# ----------------
+# Authentication
+# ----------------
+# Generate a strong secret: openssl rand -base64 32
+JWT_SECRET=your-secret-key-here
+
+# ----------------
+# Cloudinary (Image Uploads)
+# ----------------
+# Get credentials at: https://cloudinary.com/console
 CLOUDINARY_CLOUD_NAME=dwf4m7loy
 CLOUDINARY_API_KEY=387546713819419
 CLOUDINARY_API_SECRET=v3wjPHVwqbk6dotSMGEkztGl6K8
 
+# ----------------
+# Petfinder API (Optional - Shelter Integration)
+# ----------------
+# Get keys at: https://www.petfinder.com/developers/
+PETFINDER_API_KEY=your_petfinder_api_key_here
+PETFINDER_SECRET=your_petfinder_secret_here
